--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -184,7 +184,8 @@
 -
   date: "Week 14: Apr 20"
   materials: "**No Lecture** <br/>
-             **Pre-Recorded Videos:**<br/>       
+             **Pre-Recorded Videos:**<br/>
+             Lumen in UE5: Let there be light! [YouTube](https://www.youtube.com/watch?v=Dc1PPYl2uxA)<br/>
              "
   title: "Rendering: UE5 Lumen"
 -
