--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -177,7 +177,7 @@
   title: "Animation"
 -
   date: "Week 14: Apr 18"
-  materials: "[Video]()<br/>
+  materials: "[Video](https://classtranscribe.illinois.edu/video?id=ea41728e-b26c-4350-8c4f-1b55be90bf41&begin=47&from=sharedlink)<br/>
                Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
                Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf)"
   title: "Animation: Orientation"
