--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -202,7 +202,7 @@
              <br/><br/>
              **No Lecture** <br/>
              **Pre-Recorded Videos:**<br/>
-              Ray Tracing Basics [Video](https://classtranscribe.illinois.edu/video?id=4f7bc94a-f92b-4b81-885a-385e4d8f63a1&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf)<br/>
+              Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf)<br/>
               How to get Started with Real Time Tracing in Unreal [Video](https://www.youtube.com/watch?v=Bk5HOtRwgd8) <br/>
               Unreal Reflections Demo [Video](https://youtu.be/J3ue35ago3Y) <br/>
               Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)"
