--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -2,5 +2,5 @@
   date: "Week 1: August 22"
   materials: "Course Overview<br/>
               Game Genres [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)<br/>
-              UE5 and Game Engines [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE4.pdf)"
+              Lecture [Video](https://classtranscribe.illinois.edu/video?id=9f5d784e-b0d0-4b83-a2a1-2dccae56d57d&begin=145&from=sharedlink)"
   title: "Course Introduction"
