--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,7 +1,8 @@
 - 
   date: "Week 1: August 22"
   materials: "Course Overview and Game Genres [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)<br/>
-              Lecture [Video](https://classtranscribe.illinois.edu/video?id=9f5d784e-b0d0-4b83-a2a1-2dccae56d57d&begin=145&from=sharedlink)"
+              Lecture [Video](https://classtranscribe.illinois.edu/video?id=9f5d784e-b0d0-4b83-a2a1-2dccae56d57d&begin=145&from=sharedlink) <br/>
+              Lecture [Alternate Link](https://mediaspace.illinois.edu/media/t/1_n7pbl3fl)"
   title: "Course Introduction"
 - 
   date: "Week 1: August 24"
