--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -12,7 +12,9 @@
   date: "Week 2: August 29"
   materials: "Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
               Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) <br/>
-              UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)"
+              UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf) <br/><br/>
+              **Optional Reading:**<br/>
+               Data Structures for Computer Graphics Chapter 12 from [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899) [PDF](https://drive.google.com/file/d/1EB97gdVEuQ8uoUJ4TS8Esng7bdtxCVWa/view?usp=sharing)"
   title: "Art Assets"
 - 
   date: "Week 2: August 31"
