--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,23 +1,24 @@
 - 
-  date: "Week 1: August 22"
+  date: "Week 1: Aug 22"
   materials: "Course Overview and Game Genres [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)<br/>
               Lecture [Video](https://classtranscribe.illinois.edu/video?id=9f5d784e-b0d0-4b83-a2a1-2dccae56d57d&begin=145&from=sharedlink) <br/>
               Lecture [Alternate Link](https://mediaspace.illinois.edu/media/t/1_n7pbl3fl)"
   title: "Course Introduction"
 - 
-  date: "Week 1: August 24"
+  date: "Week 1: Aug 24"
   materials: "Your First Hour in UE 5.2 [Epic Link](https://dev.epicgames.com/community/learning/courses/3ke/your-first-hour-in-unreal-engine-5-2/vvdk/your-first-hour-in-unreal-engine-5-2-overview)"
   title: "Intro to Unreal Engine"
 - 
-  date: "Week 2: August 29"
+  date: "Week 2: Aug 29"
   materials: "Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
               Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) <br/>
               UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf) <br/><br/>
               **Optional Reading:**<br/>
-               Data Structures for Computer Graphics Chapter 12 from [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899) [PDF](https://drive.google.com/file/d/1EB97gdVEuQ8uoUJ4TS8Esng7bdtxCVWa/view?usp=sharing)"
+               Fundamentals of Computer Graphics Ch 12 from [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899)<br/>
+               [PDF](https://drive.google.com/file/d/1EB97gdVEuQ8uoUJ4TS8Esng7bdtxCVWa/view?usp=sharing)"
   title: "Art Assets"
 - 
-  date: "Week 2: August 31"
+  date: "Week 2: Aug 31"
   materials: "Art: Bezier Curves [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier1.pdf)<br/>
               Art: Bezier Patches [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier2.pdf)<br/>
               Art: Mazes! [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf)"
