--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -14,7 +14,8 @@
               Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) <br/>
               UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf) <br/><br/>
               **Optional Reading:**<br/>
-               Fundamentals of Computer Graphics Ch 12 from [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899)<br/>
+               Fundamentals of Computer Graphics Ch 12<br/>
+               [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899)<br/>
                [PDF](https://drive.google.com/file/d/1EB97gdVEuQ8uoUJ4TS8Esng7bdtxCVWa/view?usp=sharing)"
   title: "Art Assets"
 - 
