--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -24,6 +24,6 @@
               Art: Bezier Patches [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier2.pdf) [Video](https://classtranscribe.illinois.edu/video?id=1efc1c4b-1f5a-4934-a31e-55c9edaf9686&from=sharedlink)<br/>
               Art: Mazes! [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf) [Video Coming Soon]<br/><br/>
                **Optional Reading:**<br/>
-              Real-Time Rendering Section 17.1.1-17.1.3, 17.2.1-17.2.3
+              Real-Time Rendering Section 17.1.1-17.1.3, 17.2.1-17.2.3 <br/>
               [PDF](https://drive.google.com/file/d/1EPESnk8Lh3j68csYFnNSwDOINlwTWdsJ/view?usp=sharing) "
   title: "Geometric Modeling"
