--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -13,7 +13,7 @@
   materials: "Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
               Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) <br/>
               UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf) <br/><br/>
-              **MP1 Due Sep 13**[Link](https://illinois-cs415.github.io/assignments/mp1.html)
+              **MP1 Due Sep 13**[Link](https://illinois-cs415.github.io/assignments/mp1.html)**<br/>
               **Optional Reading:**<br/>
                Fundamentals of Computer Graphics Ch 12<br/>
                [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899)<br/>
