--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -11,8 +11,8 @@
 - 
   date: "Week 2: Aug 29"
   materials: "Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
-              Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) <br/>
-              UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf) <br/><br/>
+              UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)<br/>
+              Lecture [Video](https://classtranscribe.illinois.edu/video?id=189b97c8-d49d-4acb-87c0-d06be674f280&from=sharedlink) <br/><br/>
               **MP1 Due Sep 13** [Link](https://illinois-cs415.github.io/assignments/mp1.html)<br/><br/>
               **Optional Reading:**<br/>
                Fundamentals of Computer Graphics Ch 12<br/>
@@ -23,6 +23,7 @@
   date: "Week 2: Aug 31"
   materials: "Art: Bezier Curves [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier1.pdf) [Video](https://classtranscribe.illinois.edu/video?id=0a1abdf3-e07f-4eb1-94f8-57fb05aefce8&from=sharedlink)<br/>
               Art: Bezier Patches [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier2.pdf) [Video](https://classtranscribe.illinois.edu/video?id=1efc1c4b-1f5a-4934-a31e-55c9edaf9686&from=sharedlink)<br/>
+              Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) [Video Coming Soon]<br/>
               Art: Mazes! [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf) [Video Coming Soon]<br/><br/>
                **Optional Reading:**<br/>
               Real-Time Rendering Section 17.1.1-17.1.3, 17.2.1-17.2.3 <br/>
