--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -23,7 +23,7 @@
   date: "Week 2: Aug 31"
   materials: "Art: Bezier Curves [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier1.pdf) [Video](https://classtranscribe.illinois.edu/video?id=0a1abdf3-e07f-4eb1-94f8-57fb05aefce8&from=sharedlink)<br/>
               Art: Bezier Patches [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GeometryBezier2.pdf) [Video](https://classtranscribe.illinois.edu/video?id=1efc1c4b-1f5a-4934-a31e-55c9edaf9686&from=sharedlink)<br/>
-              Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) [Video Coming Soon]<br/>
+              Art: Static Meshes [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MeshAssets.pdf) [https://classtranscribe.illinois.edu/video?id=4d38fc4f-e140-4d60-ae7b-77fd2811b5dc&from=sharedlink]<br/>
                **Optional Reading:**<br/>
               Real-Time Rendering Section 17.1.1-17.1.3, 17.2.1-17.2.3 <br/>
               [PDF](https://drive.google.com/file/d/1EPESnk8Lh3j68csYFnNSwDOINlwTWdsJ/view?usp=sharing) "
