--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -34,7 +34,7 @@
               UE5 Nanite Example [YouTube](https://youtu.be/DKvA7NZRUcg)<br/>
               UE5 Nanite Introduction [YouTube](https://www.youtube.com/watch?v=-50MJf7hyOw&t=19s)<br/>
               Rendering: Introduction [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rendering.pdf) <br/>
-              Rendering: Perpective Projection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PerspectiveProjection.pdf)<br/>
+              Rendering: Perspective Projection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PerspectiveProjection.pdf)<br/>
               Rendering: Rendering Pipeline [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RenderingPipeline.pdf) <br/><br/>
                **Optional Reading:**<br/>
               Fundamentals of Computer Graphics Ch 8<br/>
