--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -38,7 +38,7 @@
               Rendering: Rendering Pipeline [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RenderingPipeline.pdf) <br/><br/>
                **Optional Reading:**<br/>
               Fundamentals of Computer Graphics Ch 8<br/>
-              Real-Time Rendering Chapter 2<br/>"
+              Real-Time Rendering Chapter 2 [PDF](https://drive.google.com/file/d/1nT2M0aXeWmp2y5_HZSAi2azcYlsgB_F2/view?usp=sharing)<br/>"
   title: "Geometric Modeling"
 - 
   date: "Week 3: Sep 7"
