--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -39,7 +39,7 @@
                **Optional Reading:**<br/>
               Fundamentals of Computer Graphics (4th Ed) Ch 7 [PDF](https://drive.google.com/file/d/1xzDXdAFBlrIISfhpTRMlDwAZDG1wXsrX/view?usp=drive_link) <br/>
               Real-Time Rendering Chapter 2 [PDF](https://drive.google.com/file/d/1nT2M0aXeWmp2y5_HZSAi2azcYlsgB_F2/view?usp=sharing)<br/>"
-  title: "Geometric Modeling"
+  title: "Rendering"
 - 
   date: "Week 3: Sep 7"
   materials: "Art: FBX Files<br/>
