--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -35,14 +35,14 @@
               UE5 Nanite Introduction [YouTube](https://www.youtube.com/watch?v=-50MJf7hyOw&t=19s)<br/>
               Rendering: Introduction [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rendering.pdf) <br/>
               Rendering: Perspective Projection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PerspectiveProjection.pdf)<br/>
-              Rendering: Rendering Pipeline [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RenderingPipeline.pdf) <br/><br/>
+              Lecture [Video](https://classtranscribe.illinois.edu/video?id=ecfacee7-7204-4a15-a043-066b70d7e4d3&from=sharedlink)<br/><br/>
                **Optional Reading:**<br/>
               Fundamentals of Computer Graphics (4th Ed) Ch 7 [PDF](https://drive.google.com/file/d/1xzDXdAFBlrIISfhpTRMlDwAZDG1wXsrX/view?usp=drive_link) <br/>
               Real-Time Rendering Chapter 2 [PDF](https://drive.google.com/file/d/1nT2M0aXeWmp2y5_HZSAi2azcYlsgB_F2/view?usp=sharing)<br/>"
   title: "Rendering"
 - 
   date: "Week 3: Sep 7"
-  materials: "Art: FBX Files<br/>
-              Art: Universal Scene Description<br/>
-              Art: Mazes! [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-MazeGeneration.pdf)"
-  title: "Art Assets"
+  materials: "Rendering: Rendering Pipeline [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RenderingPipeline.pdf) <br/>
+              Art: FBX Files<br/>
+              Art: Universal Scene Description"
+  title: "Rendering"
