--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -44,5 +44,6 @@
   date: "Week 3: Sep 7"
   materials: "Rendering: Rendering Pipeline [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RenderingPipeline.pdf) <br/>
               Art: FBX Files<br/>
-              Art: Universal Scene Description"
+              Art: Universal Scene Description<br/><br/>
+              **PrairieLearn HW 1 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359388)**"
   title: "Rendering"
