--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -43,7 +43,7 @@
 - 
   date: "Week 3: Sep 7"
   materials: "Rendering: Rendering Pipeline [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RenderingPipeline.pdf) [Video](https://classtranscribe.illinois.edu/video?id=11cfb825-9815-4ba3-92c9-4ab0880eb32d&from=sharedlink)<br/>
-              Art: FBX Files (coming soon) <br/>
-              Art: Universal Scene Description (coming soon)<br/><br/>
+              Art: What is the USD File Type? [YouTube](https://www.youtube.com/watch?v=GOdyx-oSs2M)<br/>
+              Art: USD Primer [YouTube](https://youtu.be/Yp_TRVD3wjQ?si=j6KjeFqaLY4UoBhL)<br/><br/>
               **PrairieLearn HW 1 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359388)**"
   title: "Rendering"
