--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -47,3 +47,8 @@
               Art: USD Primer [YouTube](https://youtu.be/Yp_TRVD3wjQ?si=j6KjeFqaLY4UoBhL)<br/><br/>
               **PrairieLearn HW 1 Assigned [Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359388)**"
   title: "Rendering"
+-
+  date: "Week3: 4 Credit Section"
+  materials: "Introduction [Video](https://classtranscribe.illinois.edu/video?id=a6ce78c6-66f4-4142-b833-5a5cd70d8e18&from=sharedlink) [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/CS415VR-01-Introduction.pdf)<br/>
+              HMDs [Video](https://classtranscribe.illinois.edu/video?id=408d2cf8-0132-4b70-8d07-d5b18d1471fe&from=sharedlink) [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/CS415VR-02-HMDs.pdf)"
+  title: "VR/XR"
