--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -54,7 +54,7 @@
   title: "VR/XR"
 - 
   date: "Week 4: Sep 12"
-  materials: " Art: FBX Files<br/>
+  materials: " Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides415-SceneGraphs and FBX.pdf)<br/>
                Rendering: LOD<br/>
                Rendering: CLOD<br/>
              "
