--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -57,5 +57,5 @@
   materials: " Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)<br/>
                Rendering: LOD [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-LOD-23.pdf)<br/>
                Rendering: CLOD [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-CLOD.pdf)<br/>
-             "
+               Lecture [Video](https://classtranscribe.illinois.edu/video?id=7b8d0c59-5b68-47c4-b5cd-a5695df81a08&from=sharedlink)"
   title: "Rendering"
