--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -61,7 +61,7 @@
   title: "Rendering"
 -
   date: "Week 4: Sep 14"
-  materials: "Rendering: LOD, the Math [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-LODQEM.pdf)<br/>
-              UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf) <br/>
-              "
+  materials: "Rendering: LOD the Math [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-LODQEM.pdf)<br/>
+              UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)"
   title: "Rendering" 
+-
