--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -65,5 +65,5 @@
               UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/><br/>
               **Optional Reading and Viewing**<br/>
               SIGGRAPH 2021: A Deep Dive into Nanite Slides [PDF](chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://advances.realtimerendering.com/s2021/Karis_Nanite_SIGGRAPH_Advances_2021_final.pdf)<br/>
-              SIGGRAPH 2021 Talk by Epic Engneer Brian Kariss [YouTube](https://youtu.be/eviSykqSUUw?si=itB6ry5OjlipMcPG)"
+              SIGGRAPH 2021 Talk by Epic Engineer Brian Kariss [YouTube](https://youtu.be/eviSykqSUUw?si=itB6ry5OjlipMcPG)"
   title: "Rendering" 
