--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -80,3 +80,84 @@
    <br/>A* in Games [Video](https://classtranscribe.illinois.edu/video?id=9464b539-b000-4df0-bc81-398c9935b5ad&from=sharedlink)&nbsp;[PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/498-AI-4.pdf) <br/>
    "
   title: "Game AI"
+- 
+  date: "Week 6: Sep 26"
+  materials: ""
+  title: "Game AI"
+- 
+  date: "Week 6: Sep 29"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 7: Oct 3"
+  materials: ""
+  title: "Guest Lecture: Game Industry"
+- 
+  date: "Week 7: Oct 5"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 8: Oct 10"
+  materials: ""
+  title: "Rendering"
+- 
+  date: "Week 8: Oct 12"
+  materials: ""
+  title: ""
+- 
+  date: "Week 9: Oct 17"
+  materials: ""
+  title: "Animation"
+- 
+  date: "Week 9: Oct 19"
+  materials: ""
+  title: "Animation"
+- 
+  date: "Week 10: Oct 24"
+  materials: ""
+  title: "Animation"
+- 
+  date: "Week 10: Oct 26"
+  materials: ""
+  title: "Animation"
+- 
+  date: "Week 11: Oct 31"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 11: Nov 2"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 12: Nov 7"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 12: Nov 9"
+  materials: ""
+  title: "Game Physics"
+- 
+  date: "Week 13: Nov 14"
+  materials: ""
+  title: ""
+- 
+  date: "Week 13: Nov 16"
+  materials: ""
+  title: ""
+- 
+  date: "Week 14: Nov 21"
+  materials: ""
+  title: ""
+- 
+  date: "Week 14: Nov 23"
+  materials: ""
+  title: ""
+- 
+  date: "Week 15: Nov 28"
+  materials: ""
+  title: ""
+- 
+  date: "Week 15: Nov 30"
+  materials: ""
+  title: ""
+- 
