--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -83,7 +83,7 @@
 - 
   date: "Week 6: Sep 26"
   materials: ""
-  title: "Game AI"
+  title: "Rendering"
 - 
   date: "Week 6: Sep 29"
   materials: ""
@@ -95,7 +95,7 @@
 - 
   date: "Week 7: Oct 5"
   materials: ""
-  title: "Rendering"
+  title: "Game Design"
 - 
   date: "Week 8: Oct 10"
   materials: ""
@@ -103,7 +103,7 @@
 - 
   date: "Week 8: Oct 12"
   materials: ""
-  title: ""
+  title: "Rendering"
 - 
   date: "Week 9: Oct 17"
   materials: ""
@@ -139,25 +139,29 @@
 - 
   date: "Week 13: Nov 14"
   materials: ""
-  title: ""
+  title: "Game AI"
 - 
   date: "Week 13: Nov 16"
   materials: ""
-  title: ""
+  title: "Game AI"
 - 
   date: "Week 14: Nov 21"
   materials: ""
-  title: ""
+  title: "**No Class - Fall Break**"
 - 
   date: "Week 14: Nov 23"
   materials: ""
-  title: ""
+  title: "**No Class - Fall Break**"
 - 
   date: "Week 15: Nov 28"
   materials: ""
-  title: ""
+  title: "Audio"
 - 
   date: "Week 15: Nov 30"
   materials: ""
-  title: ""
+  title: "Audio"
+- 
+  date: "Week 16: Dec 5"
+  materials: ""
+  title: "Game Industry: Guest Lecture"
 - 
