--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -71,7 +71,7 @@
   date: "Week 5: Sep 19"
   materials: "Game Design [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture01.pdf)<br/>
               Level Design [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture04.pdf)<br/>
-              Lecture [Video]()<br/<br/>
+              Lecture [Video](https://classtranscribe.illinois.edu/video?id=3049206b-28a6-478f-8efa-682b795eb462&from=sharedlink)<br/<br/>
                **MP2 Due Oct 6** [Link](https://illinois-cs415.github.io/assignments/mp2.html)"
   title: "Game Design"
 -
