--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -96,7 +96,8 @@
   title: "VR/XR"
 -
   date: "Week 6: Sep 26"
-  materials: "UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/>"
+  materials: "UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/>
+              Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf)"
   title: "Rendering"
 - 
   date: "Week 6: Sep 29"
