--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -97,7 +97,7 @@
 -
   date: "Week 6: Sep 26"
   materials: "UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/>
-              "
+              [Video](https://classtranscribe.illinois.edu/video?id=dc7c524c-6164-4c56-9b6a-1022c808b47d&from=sharedlink)"
   title: "Rendering"
 - 
   date: "Week 6: Sep 29"
