--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -101,8 +101,8 @@
   title: "Rendering"
 - 
   date: "Week 6: Sep 29"
-  materials: "Rasterization [PDF]()<br/>
-              Nanite Rasterization [PDF]()"
+  materials: "Rasterization [2022 Video](https://classtranscribe.illinois.edu/video?id=36abfac0-7011-49b4-9f67-f9766b24900f&from=sharedlink) [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Rasterization.pdf)<br/>
+              Nanite Rasterization [Video](https://classtranscribe.illinois.edu/video?id=ad3810ad-af3b-4e57-9f4c-3582a1901a00&from=sharedlink) [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteRasterization.pdf)"
   title: "Rendering"
 - 
   date: "Week 7: Oct 3"
