--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -189,17 +189,13 @@
 - 
   date: "Week 15: Nov 28"
   materials: ""
-  title: "Audio"
+  title: "Game Industry: Guest Lecture"
 - 
   date: "Week 15: Nov 30"
   materials: ""
-  title: "Audio"
+  title: "UE5 Lumen"
 - 
   date: "Week 16: Dec 5"
-  materials: ""
-  title: "Game Industry: Guest Lecture"
--
-  date: "Week 16: Dec 6"
   materials: "**[Exam Link]()**"
   title: "**EXAM 2**"
 - 
