--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -157,7 +157,8 @@
 - 
   date: "Week 11: Oct 31"
   materials: ""
-  title: "**No Class- Time Returned from Exam**"
+  title: "**No Class**<br/>
+            **Time Returned from Exam**"
 - 
   date: "Week 11: Nov 2"
   materials: ""
