--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -137,7 +137,7 @@
   title: "Game Design"
 -
   date: "Week 8: Oct 13"
-  materials: "**[Exam Link]()**"
+  materials: "**[Exam Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359386)**"
   title: "**EXAM 1**"
 - 
   date: "Week 9: Oct 17"
