--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -198,6 +198,6 @@
   title: "UE5 Lumen"
 - 
   date: "Week 16: Dec 5"
-  materials: "**[Exam Link]()**"
+  materials: "**[Exam Link](https://us.prairielearn.com/pl/course_instance/140468/assessment/2359387)**"
   title: "**EXAM 2**"
 - 
